--- a/package.json
+++ b/package.json
@@ -5,19 +5,30 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
+    "tauri": "tauri",
     "lint": "next lint"
   },
   "dependencies": {
     "@next/font": "13.1.0",
+    "@tauri-apps/api": "^1.2.0",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "maplibre-gl": "^2.4.0",
+    "nanoid": "^4.0.0",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
+    "recoil": "^0.7.6",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.13.1"
   }
 }
