--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,8 @@ tauri-build = { version = "1.2.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.2", features = ["dialog"] }
+libloading = "0.7.4"
+lazy_static = "1.4.0"
 
 [features]
 # by default Tauri runs in production mode
