--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.0",
+    "clsx": "^1.2.1",
     "maplibre-gl": "^2.4.0",
     "nanoid": "^4.0.0",
     "next": "13.1.0",
@@ -25,10 +24,13 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
-    "recoil": "^0.7.6",
-    "typescript": "4.9.4"
+    "react-toastify": "^9.1.1",
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
-    "@types/react-modal": "^3.13.1"
+    "@types/react-modal": "^3.13.1",
+    "eslint": "8.30.0",
+    "eslint-config-next": "^13.1.1",
+    "typescript": "4.9.4"
   }
 }
