--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.2", features = ["dialog"] }
 libloading = "0.7.4"
 lazy_static = "1.4.0"
+infer = { version = "0.11.0", default-features = false }
 
 [features]
 # by default Tauri runs in production mode
