Squashed commit of the following:
commit dc3aa0dd564a5782ec1a2d342a7824dd87a667f0
Author: invpt <57822954+invpt@users.noreply.github.com>
Date:   Mon Jan 9 22:50:30 2023 -0500

    Projects MVP

commit bf3053148bea25047eda1793030977da828262fa
Author: invpt <57822954+invpt@users.noreply.github.com>
Date:   Sun Jan 8 21:32:29 2023 -0500

    Projects: more work

commit c1498766b6e9bdf89c6faeafc4c40d18e56dd55b
Author: sl4b <57822954+sl4b@users.noreply.github.com>
Date:   Sun Jan 8 20:38:51 2023 -0500

    More work on projects

commit 5e79c737c98eadf047923c5ca12662a1c8d62737
Author: invpt <57822954+invpt@users.noreply.github.com>
Date:   Sun Jan 8 15:57:55 2023 -0500

    Projects: added API functions in JS

commit c2e40a30cb8a88cc85eff9575c792aa45cc52104
Author: invpt <57822954+invpt@users.noreply.github.com>
Date:   Sun Jan 8 14:03:07 2023 -0500

    Projects: more work

commit 003c301a00526c19129837745c09bdb53a25a449
Author: sl4b <57822954+sl4b@users.noreply.github.com>
Date:   Sat Jan 7 17:23:57 2023 -0500

    More work on projects

commit 5836a9b4a00c071ce1023162cd0b9a2fa5267aaf
Author: invpt <57822954+invpt@users.noreply.github.com>
Date:   Sat Jan 7 14:55:23 2023 -0500

    Projects: WIP

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ tauri = { version = "1.2.2", features = ["dialog"] }
 libloading = "0.7.4"
 lazy_static = "1.4.0"
 infer = { version = "0.11.0", default-features = false }
+uuid = { version = "1", features = ["v4", "fast-rng"] }
 
 [features]
 # by default Tauri runs in production mode
