--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
-    "react-toastify": "^9.1.1",
-    "recoil": "^0.7.6"
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/react-modal": "^3.13.1",
