--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ libloading = "0.7.4"
 lazy_static = "1.4.0"
 infer = { version = "0.11.0", default-features = false }
 uuid = { version = "1", features = ["v4", "fast-rng"] }
+urlencoding = "2.1.2"
 
 [features]
 # by default Tauri runs in production mode
