--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,5 +40,5 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
       
       - name: Build
-        uses: JonasKruckenberg/tauri-build@latest
+        uses: JonasKruckenberg/tauri-build@v1
         id: tauri_build
