--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
       
+      
+      - name: Yarn Install
+        run: yarn && yarn build
+        
       - name: Build
         uses: JonasKruckenberg/tauri-build@v1
         id: tauri_build
