--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,11 +23,14 @@ lazy_static = "1.4.0"
 infer = { version = "0.11.0", default-features = false }
 uuid = { version = "1", features = ["v4", "fast-rng"] }
 urlencoding = "2.1.2"
+zip = { version = "0.6.4", features = ["deflate"] }
+sha2 = "0.10.6"
+hex = "0.4.3"
 
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
-default = [ "custom-protocol" ]
+default = ["custom-protocol"]
 # this feature is used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
