--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,12 @@ name: Build Tauri Bundle/Installer
 
 on:
   push:
-    branches: [ "workflow" ]
+    branches: [ "main" ]
     paths-ignore:
     - README.md
 
   pull_request:
-    branches: [ "workflow" ]
+    branches: [ "main" ]
     paths-ignore:
     - README.md
   
