--- a/src-tauri/.gitignore
+++ b/src-tauri/.gitignore
@@ -2,5 +2,7 @@
 # will have compiled files and executables
 /target/
 
-# Ignore development "installation" files
-/dev-install/
+# Ignore built resources
+/resources/*
+# But don't ignore .gitkeep so the directory is present in empty clones
+!/resources/.gitkeep
