--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next/font": "13.1.0",
     "@tauri-apps/api": "^1.2.0",
+    "@turf/turf": "^6.5.0",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
