--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.0",
+    "@radix-ui/react-radio-group": "^1.1.2",
     "@tauri-apps/api": "^1.2.0",
     "@turf/turf": "^6.5.0",
     "@types/node": "18.11.17",
