bootstrapping rest_framework

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,13 @@ next-env.d.ts
 pyvenv.cfg
 .venv
 pip-selfcheck.json
+
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+
+.env
+db.sqlite3
