--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,11 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "maplibre-gl": "^2.4.0",
     "nanoid": "^4.0.0",
-    "next": "13.1.0",
+    "next": "^13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
