--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,7 @@
-aiohttp==3.8.5
-aiosignal==1.3.1
 asgiref==3.7.2
-async-timeout==4.0.2
-attrs==23.1.0
-channels==4.0.0
-charset-normalizer==3.2.0
 Django==4.2.3
-django-nextjs==2.3.0
 djangorestframework==3.14.0
-frozenlist==1.4.0
-idna==3.4
-multidict==6.0.4
+pip-autoremove==0.10.0
 pytz==2023.3
 sqlparse==0.4.4
 typing_extensions==4.7.1
-websockets==11.0.3
-yarl==1.9.2
