--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/uuid": "^9.0.2",
     "solid-devtools": "^0.27.3",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
@@ -19,6 +20,7 @@
     "@solidjs/router": "^0.8.3",
     "maplibre-gl": "^3.3.0",
     "solid-icons": "^1.0.11",
-    "solid-js": "^1.7.6"
+    "solid-js": "^1.7.6",
+    "uuid": "^9.0.0"
   }
 }
