--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.8.3",
+    "@turf/circle": "^6.5.0",
     "maplibre-gl": "^3.3.0",
     "solid-icons": "^1.0.11",
     "solid-js": "^1.7.6",
