--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,5 +1,9 @@
 worker_processes auto;
 
+events {
+    worker_connections 1024;
+}
+
 http {
     access_log /dev/stdout;
     error_log /dev/stderr info;
