--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,4 @@
-# fly.toml app configuration file generated for opentourbuilder on 2024-02-21T14:48:38-05:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'opentourbuilder'
+app = 'tourforge'
 primary_region = 'iad'
 
 [build]
@@ -23,5 +18,5 @@ primary_region = 'iad'
   cpus = 1
 
 [env]
-  DJANGO_HOST = 'opentourbuilder.fly.dev'
+  DJANGO_HOST = 'tourforge.fly.dev'
   DB_PATH = '/db.sqlite3'
