--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@turf/circle": "^6.5.0",
     "hash-wasm": "^4.11.0",
     "idb": "^8.0.0",
+    "jszip": "^3.10.1",
     "maplibre-gl": "^4.1.0",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.15",
