--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "maplibre-gl": "^4.1.0",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.15",
+    "solid-toast": "^0.5.0",
     "uuid": "^9.0.1"
   }
 }
