--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
   "license": "MIT",
   "devDependencies": {
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
     "solid-devtools": "^0.29.3",
     "typescript": "^5.4.2",
     "vite": "^5.1.5",
