--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.15",
     "solid-toast": "^0.5.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   }
 }
